# SOAPy

./: .readthedocs.yaml  LICENSE  README.md  requiredment.txt  requirements.txt  setup.cfg  setup.py
SOAPy_st/: __init__.py  _compat.py  _metadata.py  _settings.py  utils.py
SOAPy_st/pl/: __init__.py  _ccc.py  _chord.py  _color.py  _heatmap.py  _neighborhood.py  _niche.py  _show.py  _tendency.py  _tensor.py
SOAPy_st/pp/: __init__.py  all2adata.py  build_network.py
SOAPy_st/tl/: __init__.py  _ccc.py  _distance.py  _domain.py  _interaction.py  _mask.py  _stagate.py  _tendency.py  _tensor.py  _var_genes.py  utils.py
soapy/: __init__.py  _settings.py
soapy/pl/: __init__.py  _ccc.py  _color.py  _neighborhood.py  _show.py  _tendency.py  _tensor.py  utils.py
soapy/pp/: __init__.py  all2adata.py  build_network.py
soapy/tl/: __init__.py  _var_genes.py
source/: Installation.rst  References.rst  Release_notes.rst  conf.py  index.rst  requirements.txt
source/Api/: SOAPy_st.pl.show_box_plot.rst  SOAPy_st.pl.show_ccc_chordplot.rst  SOAPy_st.pl.show_ccc_dotplot.rst  SOAPy_st.pl.show_ccc_embedding.rst  SOAPy_st.pl.show_ccc_netplot.rst  SOAPy_st.pl.show_celltype_niche_heatmap.rst  SOAPy_st.pl.show_celltype_sample_heatmap.rst  SOAPy_st.pl.show_curves_cluster.rst  SOAPy_st.pl.show_factor_matrix_in_CP_tensor.rst  SOAPy_st.pl.show_factor_matrix_in_tucker_tensor.rst  SOAPy_st.pl.show_moran_scatterplot.rst  SOAPy_st.pl.show_network.rst  SOAPy_st.pl.show_niche_environment.rst  SOAPy_st.pl.show_proportion_in_CP.rst  SOAPy_st.pl.show_proportion_in_tucker.rst  plot.rst  (+25 more)
(+29 files in other folders)
