
[metadata]
name = SOAPy
py_modules =
    SOAPy
version = 0.0.1
author = Heqi Wang
author_email = wangheqi2021@sinh.ac.cn
description = Spatial Omics Analysis in Python
long_description = file: Readme.md
license = MIT
url = https://github.com/user/repo
python_requires = >=3.7
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests