
[metadata]
name = SOAPy
py_modules =
    SOAPy
version = 1.0.0
author = Heqi Wang
author_email = wangheqi2021@sinh.ac.cn
description = Spatial Omics Analysis in Python
long_description = file: Readme.md
license = AGPL-3.0
url = https://github.com/user/repo
python_requires = >=3.7
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests
